--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>WebSocket</title>
 </head>
 <body>
-  <h1>WebSocket Client</h1>
+  <h1>WebSocket Client Hola Betto</h1>
  <p> This client attempts to make a websocket connection to the web server which served it. It sends when you press return in the outgoing message box.
  </p>
   <div>
